--- a/web/manage/player.html
+++ b/web/manage/player.html
@@ -7,7 +7,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/css/search.css" />
+    <style>
+        
 
+        .viewer {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.9);
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
+        .viewer img {
+            max-width: 90%;
+            max-height: 90%;
+            display: none;
+        }
+        .viewer.show {
+            display: flex;
+        }
+        .arrow, .close {
+            position: absolute;
+            font-size: 30px;
+            color: white;
+            padding: 10px;
+            cursor: pointer;
+            transition: opacity 0.3s;
+            opacity: 0;
+            background: none;
+            border: none;
+        }
+        .viewer:hover .arrow, .viewer:hover .close {
+            opacity: 1;
+        }
+        .left {
+            top: 50%;
+            left: 20px;
+            transform: translateY(-50%);
+        }
+        .right {
+            top: 50%;
+            right: 20px;
+            transform: translateY(-50%);
+        }
+        .loading {
+            color: white;
+            font-size: 18px;
+            margin-bottom: 10px;
+            display: none;
+        }
+        .close {
+            top: 20px;
+            right: 20px;
+        }
+    </style>
 </head>
 
 <body class="is-preload">
@@ -68,8 +125,21 @@
                             <button id="searchButton">Search</button>
                             <input type="text" id="nameBox" placeholder="Name your filter...">    
                             <button id="saveButton" onclick="saveSearch()">Save</button>
-                        </div>                        
+                        </div>     
+                        <div id="loader-container" style="display: none;">
+                            <div class="loader-wrapper">
+                                <img src="../images/Eyedeea_Photos_m_logo.png" class="loader-logo" alt="Logo" />
+                                <img src="../images/sliding_square_loader_view.gif" class="loader-gif" alt="Loading..." />                                
+                            </div>
+                        </div>                   
                         <div id="gallery" class="gallery"></div>
+                        <div class="viewer" id="viewer">
+                            <span class="close" onclick="closeViewer()">&times;</span>
+                            <span class="arrow left" onclick="changeImage(-1)">&#10094;</span>
+                            <div class="loading" id="loading">Loading...</div>
+                            <img id="viewer-img" src="" alt="Fullscreen Image">
+                            <span class="arrow right" onclick="changeImage(1)">&#10095;</span>
+                        </div>
                         <div class="footer-container">
                             <div id="footer" class="footer"></div>
                             <p><a id="load-more" href="#">More</a></p>
