--- a/web/manage/source.html
+++ b/web/manage/source.html
@@ -81,6 +81,21 @@
                     </div>
                     <hr />
                     <!-- Scan Logs-->
+                    <h3>Directories</h3>
+                    <table>
+                        <thead>
+                            <tr>                                
+                                <th>Directory</th>
+                                <th>Photos</th>
+                            </tr>
+                        </thead>
+                        <tbody id="dirs-table-body">
+                        </tbody>
+                        <ul id="pagination_dir" class="pagination">
+
+                        </ul>
+                    </table>
+
                     <h3>Scan History</h3>
                     <table>
                         <thead>
@@ -95,7 +110,7 @@
                         </thead>
                         <tbody id="scan-logs-table-body">
                         </tbody>
-                        <ul id="pagination" class="pagination">
+                        <ul id="pagination_scan_log" class="pagination">
 
                         </ul>
                     </table>
