--- a/web/manage/source.html
+++ b/web/manage/source.html
@@ -87,6 +87,8 @@
                             <tr>                                
                                 <th>Directory</th>
                                 <th>Photos</th>
+                                <th>Rescan</th>
+                                <th>Rescan Parent</th>
                             </tr>
                         </thead>
                         <tbody id="dirs-table-body">
