--- a/web/manage/index.html
+++ b/web/manage/index.html
@@ -125,7 +125,7 @@
                     <ul>                        
                         <li><a href="index.html">System</a></li>
                         <li><a href="player.html">Player Settings</a></li>
-                        <li><a href="search.html">Search</a></li>
+                        <li><a href="photos.html">Photos</a></li>
                         <li>
                             <span id="nav_sources_ctr" class="opener active">Sources</span>
                             <ul id="nav_sources">
