--- a/web/manage/source.html
+++ b/web/manage/source.html
@@ -119,7 +119,7 @@
                     
                     <!--Update Source-->
                     <header class="main">
-                        <h3>Source Details</h3>                        
+                        <h3 id="source_details">Source Details</h3>                        
                     </header>
                     <div class="erow">
                         <label for="name">Name:</label>
@@ -157,7 +157,8 @@
                             <input type="text" id="apiKey" name="apiKey">
                         </div>
                     </div>
-                    <input id="add" name="add" type="submit" value="Update" class="primary" />
+                    
+                    <a id="add"  class="button primary icon solid fa-save">Update</a>
                     <div id="message" class="message hidden"></div>
 
                 </section>
