synology error message till photo search UI

--- a/web/manage/source.html
+++ b/web/manage/source.html
@@ -102,12 +102,11 @@
                     <table>
                         <thead>
                             <tr>                                
-                                <th>Started</th>
+                                <th class="hide-mobile">Started</th>
                                 <th>Finished</th>
                                 <th>Duration</th>
-                                <th>Total Photos</th>
-                                <th>Total Dirs</th>
-                                <th>Total Geo APIs</th>
+                                <th>Photos</th>
+                                <th>Dirs</th>
                             </tr>
                         </thead>
                         <tbody id="scan-logs-table-body">
