--- a/web/manage/source.html
+++ b/web/manage/source.html
@@ -87,8 +87,6 @@
                             <tr>                                
                                 <th>Directory</th>
                                 <th>Photos</th>
-                                <th>Rescan</th>
-                                <th>Rescan Parent</th>
                             </tr>
                         </thead>
                         <tbody id="dirs-table-body">
@@ -212,7 +210,7 @@
     <script src="assets/js/util.js"></script>
     <script src="assets/js/manage_main.js"></script>
     <script src="assets/js/eyedeea_manage.js"></script>
-
+    <script src="assets/js/render_tables.js"></script>
 </body>
 
 </html>
