--- a/web/manage/source.html
+++ b/web/manage/source.html
@@ -209,8 +209,9 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/manage_main.js"></script>
+    <script src="assets/js/paginated_table.js"></script>
+    <script src="assets/js/scan.js"></script>
     <script src="assets/js/eyedeea_manage.js"></script>
-    <script src="assets/js/render_tables.js"></script>
 </body>
 
 </html>
