--- a/web/manage/player.html
+++ b/web/manage/player.html
@@ -106,7 +106,7 @@
                     <h3 id="system_summary"></h3>
                     <a id="btn_add_filter" onclick="openModal()" class="button primary icon"
                         style="vertical-align: middle;">Add New Filter</a>
-                    <div id="notification" class="notification-container">This is a notification message!</div>
+                    <div id="notification" class="notification-container">N/A</div>
 
                 </div>
                 <table>
