--- a/web/manage/source.html
+++ b/web/manage/source.html
@@ -6,6 +6,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <style>
+        #title {
+            font-size: 5vw;
+            padding-bottom: 1vw;
+            display: inline-flex;
+            align-items: center;
+        }
+    </style>
 </head>
 
 <body class="is-preload">
@@ -35,16 +43,8 @@
                 </header>
                 <!-- Content -->
                 <section>
-                    <!--Update Source-->
-                    <header class="main">
-                        <a href="#source_details">
-                            <span class="icon solid fa-edit" style="font-size:larger;"></span>
-                            <h2 id="title" >Photo Sources</h2>
-                        </a>
-                    </header>
-                    <ul class="contact">
-                        <li class="icon solid fa-edit"><a href="#source_details">NAS</a></li>
-                    </ul>
+                    <!--Update Source-->        
+                    <a  href="#source_details" id="title" class="icon solid fa-edit">NAS</a>                   
                     <!-- Scan-->
                     <div class="table-wrapper">
                         <table>                           
